TinyMUX 2.7:  CHANGES
Last Update:  December 2006

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Placeholder.


Bug Fixes:
~~~~~~~~~
 -- Placeholder.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Placeholder.


Miscellaneous:
~~~~~~~~~~~~~
 -- Placeholder.